--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ timezone:
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://blog.wthfeng.com
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :title/
 permalink_defaults:
 
 # Directory
@@ -69,6 +69,24 @@ time_format: HH:mm:ss
 ## Set per_page to 0 to disable pagination
 per_page: 10
 pagination_dir: page
+
+## seo
+
+
+
+#设置百度主动推送
+# baidu_url_submit:
+#   count: 200  #比如200，代表提交最新的200个链接
+#   host: blog.wthfeng.com # 在百度站长平台中注册的域名，这个改为你自己的域名
+#   token: czz1zSG9HrPQVCbV # 请注意这是您的秘钥， 所以请不要把博客源代码发布在公众仓库里!
+#   path: baidu_urls.txt # 文本文档的地址， 新链接会保存在此文本文档里，这个默认
+
+
+# 自动生成sitemap
+sitemap:
+   path: sitemap.xml
+baidusitemap:
+   path: baidusitemap.xml
 
 # Extensions
 # Plugins: hexo-generator-feed
